# effective-eigen

./: CMakeLists.txt  efficient_eigen.cpp  notes
eigen_ref/: CMakeLists.txt  eigen_ref.cpp
